# wyoming-faster-qwen3-tts

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
src/wyoming_faster_qwen3_tts/: __main__.py  audio.py  cleanup.py  config.py  constants.py  downloader.py  handler.py  service.py
