[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["wyoming_faster_qwen3_tts*"]

[project]
name = "wyoming-faster-qwen3-tts"
version = "0.1.0"
description = "Wyoming TTS server backed by faster-qwen3-tts CustomVoice"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faster-qwen3-tts",
    "modelscope",
    "numpy",
    "wyoming",
]

[project.scripts]
wyoming-faster-qwen3-tts = "wyoming_faster_qwen3_tts.__main__:main"
